--- a/templates/topbeat.yml.j2
+++ b/templates/topbeat.yml.j2
@@ -9,7 +9,7 @@ input:
 
 output:
   logstash:
-    hosts: ["{{ hostvars[groups['elastic-logstash'][0] }}:{{ logstash_beat_input_port }}"]
+    hosts: {% set IP_ARR=[] %}{% for host in groups['elastic-logstash'] %}{% if IP_ARR.insert(loop.index,hostvars[host]['ansible_ssh_host']) %}{% endif %}{% endfor %}[{{ IP_ARR | map('regex_replace', '$', ':' ~ logstash_beat_input_port|string()) | map('regex_replace', '$', '"') | map('regex_replace', '^', '"') | list | join(',' ) }}]
 
 shipper:
 
